[package]
name = "ca-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "my-telemetry",
] }
my-http-server-controllers = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

my-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-logger.git" }

flurl = { tag = "0.3.0", git = "https://github.com/MyJetTools/fl-url.git" }

my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }


tokio = { version = "*", features = ["full"] }
async-trait = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
hyper = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "*"
prost = "*"
serde_yaml = "*"


openssl = "*"
p12 = "*"
hex = "*"
base64 = "*"
