[package]
name = "nginx-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.7.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
    "controllers",
] }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "hex",
] }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }

flurl = { tag = "0.5.2", git = "https://github.com/MyJetTools/fl-url.git" }

my-settings-reader = { tag = "0.3.1", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

my-tls = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-tls.git", features = [
    "self-signed-certificate",
] }

tokio = { version = "*", features = ["full"] }
async-trait = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "*"
prost = "*"
serde_yaml = "*"
openssl = "*"


hex = "*"
base64 = "*"
rcgen = "*"
pem = "*"
chrono = "*"
uuid = { version = "*", features = ["v4"] }
